dom/events/IMEContentObserver.cpp
@@ -792,15 +792,6 @@ void IMEContentObserver::CharacterDataChanged(
              // node.
   }
 
-  // Let TextComposition have a change to update composition string range in
-  // the text node if the change is caused by the web apps.
-  if (mWidget && !IsEditorHandlingEventForComposition()) {
-    if (RefPtr<TextComposition> composition =
-            IMEStateManager::GetTextCompositionFor(mWidget)) {
-      composition->OnCharacterDataChanged(*aContent->AsText(), aInfo);
-    }
-  }
-
   if (!NeedsTextChangeNotification() ||
       !nsContentUtils::IsInSameAnonymousTree(mRootContent, aContent)) {
     return;
